<resources>
    <string name="app_name">Laminar Flow Games Tictactoe</string>
    <string name="game_title">Tic-Tac-Toe</string>
    <string name="btn_new_game">Clear Board</string>
    <string name="cell_empty_description">Empty cell</string>
    <string name="status_turn">Player %1$s\'s turn</string>
    <string name="status_winner">Player %1$s wins!</string>
    <string name="status_draw">It\'s a draw!</string>
    <string name="cell_desc_empty">Row %1$d, Column %2$d, empty</string>
    <string name="cell_desc_occupied">Row %1$d, Column %2$d, %3$s</string>
    <string name="mode_two_player">2 Player</string>
    <string name="mode_single_player">1 Player</string>
    <string name="status_cpu_turn">Android\'s turn</string>
    <string name="status_your_turn">Your turn</string>
    <string name="status_initial">Your turn</string>
    <string name="score_header_player">Player</string>
    <string name="score_header_wins">Wins</string>
    <string name="score_label_x">X</string>
    <string name="score_label_o">O</string>
    <string name="score_label_you">You</string>
    <string name="score_label_android">Android</string>
    <string name="score_label_draws">Draws</string>
    <string name="status_you_win">You win!</string>
    <string name="status_android_wins">Android wins!</string>
    <string name="btn_new_round">Clear Score</string>
</resources>
